fix: resumegroupitem add nowrap to time

--- a/src/components/ResumeGroupItem/style.css
+++ b/src/components/ResumeGroupItem/style.css
@@ -85,6 +85,7 @@
   /* identical to box height, or 18px */
 
   letter-spacing: -0.05em;
+  white-space: nowrap;
 
   /* Black */
 
